--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
 </head>
 <body>
     <div>
-        <a href="https://smindlondz.github.io/uj-layout-workshop/cupcakes.html">This is my cupcakes web</a>
-        <a href="https://smindlondz.github.io/uj-layout-workshop/responsive.html">This is my responsive web</a>
+        <a href="cupcakes.html">This is my cupcakes web</a>
     </div>
+    <div>
+        <a href="responsive.html">This is my responsive web</a>
+    </div>  
+        
 </body>
 </html>
