--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </style>
 </head>
 <body>
+    <h1>My layout page</h1>
     <div>
         <a href="cupcakes.html">This is my cupcakes web</a>
     </div>
