--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
     <style>
         body {
-            background-color: aqua;
+            background-color: gray;
+            
         }
 
     </style>
